<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">


    <item android:id="@+id/action_player"
          android:icon="@drawable/ic_player"
          android:orderInCategory="1"
          android:title="@string/action_player"
          app:showAsAction="always"/>

    <item
        android:id="@+id/action_gamemode"
          android:icon="@drawable/ic_game"
          android:orderInCategory="2"
        android:title="@string/action_game"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_edit_current"
                android:icon="@drawable/ic_edit"
                android:orderInCategory="1"
                android:title="error"
                app:showAsAction="always"/>

            <item
                android:id="@+id/manage_gamemodes"
                android:icon="@drawable/ic_settings"
                android:orderInCategory="2"
                android:title="@string/manage_gamemodes"
                app:showAsAction="always"/>

            <item
                android:id="@+id/action_new_game"
                android:icon="@drawable/ic_game"
                android:orderInCategory="3"
                android:title="@string/new_game"
                app:showAsAction="always"/>
        </menu>
    </item>

    <item android:id="@+id/action_settings"
          android:icon="@drawable/ic_settings"
          android:orderInCategory="100"
          android:title="@string/action_settings"
          app:showAsAction="always"/>
</menu>
