<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context="martinek.stepan.scorecounter.SettingsActivity">


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swSubtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:text="@string/settings_use_subtotals"
        />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="2dp"
        android:background="#000000"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swScoreButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="false"
        android:text="@string/settings_score_button"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="2dp"
        android:background="#000000"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:text="@string/settings_longclick"/>

</LinearLayout>
